@@ -185,7 +185,6 @@ class _GLUECLAMP_:
 
     def _get_root(self):	return self.heapyc.RootState
     def _get_target(self):	return self._parent.Target.Target()
-    def _get_view(self):	return self.View(self)
 
     def _set_root(self, root):
 	self.clear_retainers()
